--- a/models/modelEN.ipynb
+++ b/models/modelEN.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,21 +374,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "new_text: joyful\n",
-      "1/1 [==============================] - 0s 163ms/step\n",
-      "Positive (96.57%)\n"
+      "new_text: good\n",
+      "1/1 [==============================] - 0s 146ms/step\n",
+      "Positive (61.96%)\n"
      ]
     }
    ],
    "source": [
-    "new_text = 'joyful'\n",
+    "new_text = 'good'\n",
     "new_text = preprocess_text(new_text)\n",
     "print('new_text:', new_text)\n",
     "new_text = tokenizer.texts_to_sequences([new_text])  # Convert text to sequences of integers\n",
