--- a/websrapping/main.ipynb
+++ b/websrapping/main.ipynb
@@ -2,11 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import pprint\n",
+    "import time\n",
+    "import re\n",
+    "import time\n",
+    "\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.options import Options\n",
     "from selenium.webdriver.common.keys import Keys\n",
@@ -15,113 +20,99 @@
     "from selenium.common.exceptions import TimeoutException\n",
     "from selenium.common.exceptions import NoSuchElementException\n",
     "from selenium.webdriver.common.by import By\n",
-    "from bs4 import BeautifulSoup\n",
-    "import time\n",
-    "import re"
+    "from bs4 import BeautifulSoup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# https://www.cosmenet.in.th/\n",
     "driver = webdriver.Chrome(executable_path='chromedriver')\n",
-    "driver.get(\"https://www.lazada.co.th/products/m209-cappuvini-i4139515884-s16234563094.html?spm=a2o4m.home.just4u.21.75317f6dPspHi4&&scm=1007.17519.162103.0&pvid=4e75f8d6-d577-495a-b564-75d45c2f3a01&search=0&clickTrackInfo=pvid%3A4e75f8d6-d577-495a-b564-75d45c2f3a01%3Bchannel_id%3A0000%3Bmt%3Ahot%3Bitem_id%3A4139515884%3Bself_ab_id%3A162103%3Bself_app_id%3A7519%3Blayer_buckets%3A5437.25236_6059.28891_955.3631_955.3632%3Bpos%3A20%3B\")\n"
+    "driver.get(\"https://www.cosmenet.in.th/reviews/27779\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "review_csv=[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "M209 Cappuvini ลิปสติก ลิปกลอสเจลลี่ ทรงสามเหลี่ยม หลอดใส\n"
+      "['น้ำแร่ฉีดพ่นบำรุงผิว เพิ่มความชุ่มชื้นได้ดี มีกลิ่นหอม ถ้าไม่แพ้น้ำหอมก็โอเคใช้ได้ ส่วนใครที่ผิวแพ้ง่ายก็ควรทดสอบก่อนใช้', 'ใช้ดีมาก ฉีดก่อนหรือหลังแต่งหน้า ผิวชุ่มชื้นก่อนแต่งหน้าทำให้แต่งหน้าติดทน หลังแต่งหน้าก็ช่วยล็อคผิวให้อยู่ได้นานขึ้น กลิ่นหอมสดชื่น แต่ละอองจากหัวสเปรย์ใหญ่ไปหน่อย']\n"
      ]
     }
    ],
    "source": [
-    "review_csv=[]\n",
-    "date_review_csv = []\n",
-    "titles = driver.find_element(By.CLASS_NAME, 'pdp-mod-product-badge-title').text\n",
-    "print(titles)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    }
-   ],
-   "source": [
+    "# Scroll to the bottom of the page\n",
+    "driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
+    "time.sleep(2)  # Wait for the page to load the new comments\n",
+    "\n",
+    "# Extract comments\n",
+    "comment_elements = driver.find_elements(By.XPATH, \"//div[contains(@class, 'review-comment')]//div[contains(@class, 'comment')]\")\n",
+    "comments = []\n",
+    "\n",
+    "for comment_element in comment_elements:\n",
+    "    comment = comment_element.text\n",
+    "    comments.append(comment)\n",
+    "\n",
+    "# Scroll and load more comments until all comments are loaded\n",
     "while True:\n",
-    "    try:\n",
-    "        # Wait for the dialog to appear\n",
-    "        wait = WebDriverWait(driver, 10)\n",
-    "        dialog = wait.until(EC.presence_of_element_located((By.CLASS_NAME, 'baxia-dialog')))\n",
+    "    # Scroll to the bottom of the page\n",
+    "    driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
+    "    time.sleep(2)  # Wait for the page to load the new comments\n",
     "\n",
-    "        # Execute JavaScript to remove the dialog element from the DOM\n",
-    "        driver.execute_script(\"arguments[0].remove()\", dialog)\n",
+    "    # Check if new comments are loaded\n",
+    "    new_comment_elements = driver.find_elements(By.XPATH, \"//div[contains(@class, 'review-comment')]//div[contains(@class, 'comment')]\")\n",
+    "    if len(new_comment_elements) == len(comment_elements):\n",
+    "        break  # No new comments loaded, exit the loop\n",
     "\n",
-    "        # Wait for the review elements to be visible\n",
-    "        WebDriverWait(driver, 10).until(EC.visibility_of_all_elements_located((By.XPATH, '//*[@id=\"module_product_review\"]/div/div/div[3]/div[1]/div[1]/div[3]/div[1]')))\n",
+    "    # Update comment_elements and extract new comments\n",
+    "    comment_elements = new_comment_elements\n",
+    "    for comment_element in comment_elements[len(comments):]:\n",
+    "        comment = comment_element.text\n",
+    "        comments.append(comment)\n",
     "\n",
-    "        # Get product reviews\n",
-    "        product_reviews = driver.find_elements(By.XPATH, '//*[@id=\"module_product_review\"]/div/div/div[3]/div[1]/div[1]/div[3]/div[1]')\n",
-    "\n",
-    "        for product in product_reviews:\n",
-    "            try:\n",
-    "                # Review Comment\n",
-    "                comment = product.text\n",
-    "                review_csv.append(comment)\n",
-    "                print(\"Review:\", comment)\n",
-    "            except NoSuchElementException:\n",
-    "                print(\"No date or review comment found for this product.\")\n",
-    "\n",
-    "        # Check for the \"next\" button\n",
-    "        if len(driver.find_elements(By.CSS_SELECTOR, \"button.next-pagination-item.next[disabled]\")) > 0:\n",
-    "            break\n",
-    "        else:\n",
-    "            button_next = WebDriverWait(driver, 10).until(EC.element_to_be_clickable(\n",
-    "                (By.CSS_SELECTOR, \"button.next-pagination-item.next\")))\n",
-    "            driver.execute_script(\"arguments[0].click();\", button_next)\n",
-    "            print(\"Next page\")\n",
-    "            time.sleep(2)\n",
-    "    except TimeoutException:\n",
-    "        break\n",
-    "    finally:\n",
-    "        # Close the browser\n",
-    "        print(review_csv)\n"
+    "print(comments[:2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Review Comments:\n"
+      "Comments exported to comments.csv\n"
      ]
     }
    ],
    "source": [
-    "# Print the collected review data\n",
-    "print(\"Review Comments:\")\n",
-    "for review in review_csv:\n",
-    "    print(review)"
+    "# Create a DataFrame from the comments list\n",
+    "df = pd.DataFrame({'Comment': comments})\n",
+    "\n",
+    "# Specify the CSV file path\n",
+    "csv_file = 'comments.csv'\n",
+    "\n",
+    "# Export the DataFrame to CSV\n",
+    "df.to_csv(csv_file, index=False, encoding='utf-8')\n",
+    "\n",
+    "print(\"Comments exported to\", csv_file)"
    ]
   }
  ],
@@ -141,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
