--- a/websrapping/main.ipynb
+++ b/websrapping/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,18 +25,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "# https://www.cosmenet.in.th/\n",
     "driver = webdriver.Chrome(executable_path='chromedriver')\n",
-    "driver.get(\"https://www.cosmenet.in.th/reviews/27779\")"
+    "# driver.get(\"https://www.cosmenet.in.th/reviews/27779\")\n",
+    "driver.get(\"https://www.cosmenet.in.th/product/47031/bsc-hya-hemp-seed-oil-serum\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "element_review = driver.find_element(By.XPATH, \"/html/body/app-root/div/div/app-product-detail/div/div[2]/div/div[1]/div/div[2]/div\")\n",
+    "driver.execute_script(\"arguments[0].click();\", element_review)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find the <a> element\n",
+    "element = driver.find_element(By.XPATH, \"//a[@class='btn btn-pink2']\")\n",
+    "\n",
+    "# Get the href attribute value\n",
+    "href = element.get_attribute('href')\n",
+    "\n",
+    "# Navigate the driver to the href link\n",
+    "driver.get(href)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['น้ำแร่ฉีดพ่นบำรุงผิว เพิ่มความชุ่มชื้นได้ดี มีกลิ่นหอม ถ้าไม่แพ้น้ำหอมก็โอเคใช้ได้ ส่วนใครที่ผิวแพ้ง่ายก็ควรทดสอบก่อนใช้', 'ใช้ดีมาก ฉีดก่อนหรือหลังแต่งหน้า ผิวชุ่มชื้นก่อนแต่งหน้าทำให้แต่งหน้าติดทน หลังแต่งหน้าก็ช่วยล็อคผิวให้อยู่ได้นานขึ้น กลิ่นหอมสดชื่น แต่ละอองจากหัวสเปรย์ใหญ่ไปหน่อย']\n"
+      "['เรื่องคะแนนความผิวชุ่มฉ่ำทันทีที่ใช้ให้เต็มห้าดาวไปเลย\\nแต่ด้วยสภาพผิวที่ค่อนข้างมันเป็นทุนเดิม ทำให้ต้องยกไปใช้แค่ช่วงกลางคืน', ':: แพคเกจ / เนื้อสัมผัส / กลิ่น ::\\n- ขวดจะเป็นแพคเกจหัวดรอปเปอร์\\n- เนื้อเซรั่มตัวนี้ตอนเกลี่ยจะให้ความชุ่มชื้น โกลว์กับผิว แต่ก็เนื้อบางเบาซึมไวนะ มีเม็ดบีสท์สีเขียวในเนื้อเซรั่มด้วย\\n- กลิ่นเค้าก็จะเป็น กลิ่น Terpene ที่ช่วยปรับอารมณ์ให้ผิวผ่อนคลายเหมือนกับเซรั่ม CBD เลยค่า แต่ในความคิดเจนแอบรู้สึกว่าตัวนี้กลิ่นเบากว่านะ > <\\n\\n:: ผลลัพธ์หลังใช้ ::\\nหลังจากที่ลองใช้เซรั่ม BSC Hya Hemp Seed Oil Serum เนื้อสัมผัสเค้าจะให้ความโกลว์กับผิวหลังทามากกว่าตัวเซรั่ม CBD ค่ะ แต่อาจจะใช้เวลาซึมเข้าสู่ผิวมากกว่าเซรั่ม CBD แค่นิ้ดดดเดียว ถึงจะขึ้นชื่อว่าเป็น Oil Serum แต่เนื้อสัมผัสเค้าบางเบา ไม่เหนอะหนะผิวเลย ไม่รู้สึกว่าเป็นน้ำมันอ่ะ เจนปกติไม่ค่อยใช้ Oil Serum แต่พอลองตัวนี้แล้วคือใช้ได้เช้า-เย็นสบายๆ เลยค่า ชอบตรงที่ทาเซรั่มตัวนี้ก็คือปลุกพลังผิวให้ตื่นขึ้นเลย ผิวชุ่มชื้น ดูอิ่มน้ำขึ้นทันที ผิวดูสดใสโกลว์แบบสุขภาพดี ใครก็จับไม่ได้ค่ะว่านอนน้อยแต่นอนนะ 😂']\n"
      ]
     }
    ],
@@ -91,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
