--- a/websrapping/main.ipynb
+++ b/websrapping/main.ipynb
@@ -29,10 +29,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# https://www.cosmenet.in.th/\n",
     "driver = webdriver.Chrome(executable_path='chromedriver')\n",
-    "# driver.get(\"https://www.cosmenet.in.th/reviews/27779\")\n",
-    "driver.get(\"https://www.cosmenet.in.th/product/47031/bsc-hya-hemp-seed-oil-serum\")\n"
+    "driver.get(\"\")\n"
    ]
   },
   {
@@ -72,17 +70,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['เรื่องคะแนนความผิวชุ่มฉ่ำทันทีที่ใช้ให้เต็มห้าดาวไปเลย\\nแต่ด้วยสภาพผิวที่ค่อนข้างมันเป็นทุนเดิม ทำให้ต้องยกไปใช้แค่ช่วงกลางคืน', ':: แพคเกจ / เนื้อสัมผัส / กลิ่น ::\\n- ขวดจะเป็นแพคเกจหัวดรอปเปอร์\\n- เนื้อเซรั่มตัวนี้ตอนเกลี่ยจะให้ความชุ่มชื้น โกลว์กับผิว แต่ก็เนื้อบางเบาซึมไวนะ มีเม็ดบีสท์สีเขียวในเนื้อเซรั่มด้วย\\n- กลิ่นเค้าก็จะเป็น กลิ่น Terpene ที่ช่วยปรับอารมณ์ให้ผิวผ่อนคลายเหมือนกับเซรั่ม CBD เลยค่า แต่ในความคิดเจนแอบรู้สึกว่าตัวนี้กลิ่นเบากว่านะ > <\\n\\n:: ผลลัพธ์หลังใช้ ::\\nหลังจากที่ลองใช้เซรั่ม BSC Hya Hemp Seed Oil Serum เนื้อสัมผัสเค้าจะให้ความโกลว์กับผิวหลังทามากกว่าตัวเซรั่ม CBD ค่ะ แต่อาจจะใช้เวลาซึมเข้าสู่ผิวมากกว่าเซรั่ม CBD แค่นิ้ดดดเดียว ถึงจะขึ้นชื่อว่าเป็น Oil Serum แต่เนื้อสัมผัสเค้าบางเบา ไม่เหนอะหนะผิวเลย ไม่รู้สึกว่าเป็นน้ำมันอ่ะ เจนปกติไม่ค่อยใช้ Oil Serum แต่พอลองตัวนี้แล้วคือใช้ได้เช้า-เย็นสบายๆ เลยค่า ชอบตรงที่ทาเซรั่มตัวนี้ก็คือปลุกพลังผิวให้ตื่นขึ้นเลย ผิวชุ่มชื้น ดูอิ่มน้ำขึ้นทันที ผิวดูสดใสโกลว์แบบสุขภาพดี ใครก็จับไม่ได้ค่ะว่านอนน้อยแต่นอนนะ 😂']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Scroll to the bottom of the page\n",
     "driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
