--- a/websrapping/main.ipynb
+++ b/websrapping/main.ipynb
@@ -25,17 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "driver = webdriver.Chrome(executable_path='chromedriver')\n",
-    "driver.get(\"\")\n"
+    "driver.get(\"https://www.cosmenet.in.th/product/13237/vaseline-healthy-bright-uv-extra-brightening-glutaglow-lotion\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,9 +70,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ส่วนตัวใช้แล้วรู้สึกว่าขาวขึ้นค่ะ แต่ขนก็แอบยาวขึ้นด้วยไม่รู้เกี่ยวไหมแต่ เรารู้สึกว่าขนยาวขึ้นจริง ความเหนอะก็ระดับหนึ่งอาจต้องรอให้ซึมเข้าผิวสักหน่อย', 'ผิวนุ่มกระจ่างใสมากขึ้นค่ะเมื่อใช้เป็นประจำ เพราะตัวเองมีช่วงที่ผิวหมองเลยซื้อมาใช้ ผลที่ได้คือผิวกระจ่างใสขึ้นค่ะ']\n"
+     ]
+    }
+   ],
    "source": [
     "# Scroll to the bottom of the page\n",
     "driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
@@ -108,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
