--- a/models/modelEN.ipynb
+++ b/models/modelEN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -153,18 +153,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<Axes: >"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train\n",
+      "negative    24980\n",
+      "positive    24973\n",
+      "neutral     17791\n",
+      "Name: sentiment, dtype: int64 \n",
+      "\n",
+      "Test\n",
+      "Count y_test positive: 5068\n",
+      "Count y_test negative: 3536\n",
+      "Count y_test neutral: 4945\n"
+     ]
     },
     {
      "data": {
@@ -178,7 +184,22 @@
     }
    ],
    "source": [
-    "df_resampled['sentiment'].value_counts().plot.bar()"
+    "df_resampled['sentiment'].value_counts().plot.bar()\n",
+    "print(\"Train\")\n",
+    "print(df_resampled['sentiment'].value_counts(),\"\\n\")\n",
+    "\n",
+    "# Decode the labels from one-hot encoded vectors to sentiment labels\n",
+    "labels = np.argmax(y_test, axis=1)\n",
+    "label_counts = np.bincount(labels)\n",
+    "\n",
+    "# Create a dictionary to map label indices to their corresponding labels\n",
+    "label_mapping = {0: 'positive', 1: 'negative', 2: 'neutral'}\n",
+    "\n",
+    "print(\"Test\")\n",
+    "# Print the label counts\n",
+    "for label_idx, count in enumerate(label_counts):\n",
+    "    label = label_mapping[label_idx]\n",
+    "    print(f\"Count y_test {label}: {count}\")"
    ]
   },
   {
