--- a/models/modelTH.ipynb
+++ b/models/modelTH.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -107,18 +107,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<Axes: >"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train\n",
+      "neutral     10846\n",
+      "positive     9069\n",
+      "negative     8793\n",
+      "Name: sentiment, dtype: int64 \n",
+      "\n",
+      "Test\n",
+      "Count y_test positive: 1781\n",
+      "Count y_test negative: 2145\n",
+      "Count y_test neutral: 1817\n"
+     ]
     },
     {
      "data": {
@@ -132,7 +138,22 @@
     }
    ],
    "source": [
-    "data['sentiment'].value_counts().plot.bar()"
+    "data['sentiment'].value_counts().plot.bar()\n",
+    "print(\"Train\")\n",
+    "print(data['sentiment'].value_counts(),\"\\n\")\n",
+    "\n",
+    "# Decode the labels from one-hot encoded vectors to sentiment labels\n",
+    "labels = np.argmax(y_test, axis=1)\n",
+    "label_counts = np.bincount(labels)\n",
+    "\n",
+    "# Create a dictionary to map label indices to their corresponding labels\n",
+    "label_mapping = {0: 'positive', 1: 'negative', 2: 'neutral'}\n",
+    "\n",
+    "print(\"Test\")\n",
+    "# Print the label counts\n",
+    "for label_idx, count in enumerate(label_counts):\n",
+    "    label = label_mapping[label_idx]\n",
+    "    print(f\"Count y_test {label}: {count}\")\n"
    ]
   },
   {
